<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Simple Todo</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="remind">Remind Me</string>
    <string name="error_empty_title">Surely, You must have something to do.</string>
    <string name="delete">Delete</string>
    <string name="at">\@</string>
    <string name="save">Save</string>
    <string name="delete_all">Delete all</string>

    <!-- Default title for color picker dialog [CHAR LIMIT=30] -->
    <string name="color_picker_default_title">Select a Color</string>
    <!-- Content description for a color square. -->
    <string name="color_swatch_description">Color <xliff:g example="14" id="color_index">%1$d</xliff:g></string>
    <!-- Content description for a selected color square. -->
    <string name="color_swatch_description_selected">Color <xliff:g example="14" id="color_index">%1$d</xliff:g> selected</string>
    <string name="select_color">Select Color</string>
    <string name="title_activity_snooze">SnoozeActivity</string>
    <string name="snooze">Snooze</string>
    <string name="no_todo_hint">Add new todos with the + button\nat the bottom</string>
    <string name="no_todos">No todos</string>
    <string name="about">About</string>
    <string name="dev_name">HARRY SINGH</string>
    <string name="contact">Contact Me:\n<a href="http://www.harryio.com">http://www.harryio.com</a></string>
    <string name="github">Github:\n<a href="https://github.com/harryio/SimpleTodo">https://github.com/harryio/SimpleTodo</a></string>
</resources>
